--- a/templates/core/dashboard_doctor.html
+++ b/templates/core/dashboard_doctor.html
@@ -44,7 +44,7 @@
                             {% for patient in patients %}
                                 <tr>
                                     <td>{{ patient.user.get_full_name }}</td>
-                                    <td>{{ patient.dni|default:"N/A" }}</td>
+                                    <td>{{ patient.user.dni|default:"N/A" }}</td>
                                     <td>
                                         <a href="{% url 'patient_detail' patient.id %}" class="btn btn-sm btn-primary">
                                             Ver
